@@ -1,0 +1,3 @@
+-- https://github.com/pyanodon/pybugreports/issues/554
+
+require "prototypes.updates.hot-air"
