@@ -8,6 +8,7 @@ Date: ?
     - Added new graphics for the reformer.
     - Increased the healh of the reformer from 100, 100, 100, 100 to 300, 600, 900, 1200.
     - Optimized VRAM consumption for the reformer.
+    - Fixed cobalt oxide missing from hot air super alloy smelting. Resolves https://github.com/pyanodon/pybugreports/issues/554
 ---------------------------------------------------------------------------------------------------
 Version: 3.0.8
 Date: 2024-11-18
